Set rabbitmq host and port directly

--- a/geoserver_spring.yml
+++ b/geoserver_spring.yml
@@ -18,8 +18,8 @@ server:
 
 spring:
   rabbitmq:
-    host: ${rabbitmq.host:rabbitmq}
-    port: ${rabbitmq.port:5672}
+    host: rabbitmq
+    port: 5672
     username: ${rabbitmq.user:guest}
     password: ${rabbitmq.password:guest}
     virtual-host: ${rabbitmq.vhost:}
